# rust-authentication

./: .env  CONTRIBUTING.md  Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml
migrations/2025-03-10-210353_create_users/: down.sql  up.sql
src/: .editorconfig  auth.rs  db.rs  handlers.rs  jwt_routes.rs  lib.rs  main.rs  models.rs  schema.rs
src/dtos/: create_user.rs
temp/: database.sql
tests/: integration_tests.rs
tests/api/RUST-AUTH/: bruno.json  login user.bru  register user.bru
