[package]
name = "rust_authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.7"
jsonwebtoken = "8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] } # Pour (de)sérialiser des données
serde_json = "1.0.133"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.17.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
]

[dependencies.diesel]
version = "2.2.8"
features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2"
]
